// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component should match snapshot as default 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #020100;
  color: #F2EFE9;
  font-size: 1rem;
  padding: 0.45rem 1.8rem 0.45rem 1.8rem;
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  font-weight: 500;
  font-stretch: normal;
  line-height: 1.4;
  margin: 0.2rem;
  display: relative;
  overflow: hidden;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  will-change: background-color;
}

.c0:hover {
  background-color: #161514;
}

.c0:active {
  background-color: #2a2928;
}

.c0:focus {
  outline: none;
}

<button
    class="c0"
    shape="rounded"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #020100;
  color: #F2EFE9;
  font-size: 0.8rem;
  padding: 0.375rem 1.4rem 0.375rem 1.4rem;
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  font-weight: 500;
  font-stretch: normal;
  line-height: 1.4;
  margin: 0.2rem;
  display: relative;
  overflow: hidden;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  will-change: background-color;
}

.c0:hover {
  background-color: #161514;
}

.c0:active {
  background-color: #2a2928;
}

.c0:focus {
  outline: none;
}

<button
    class="c0"
    shape="rounded"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 2`] = `
<DocumentFragment>
  .c0 {
  background-color: #020100;
  color: #F2EFE9;
  font-size: 1rem;
  padding: 0.45rem 1.8rem 0.45rem 1.8rem;
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  font-weight: 500;
  font-stretch: normal;
  line-height: 1.4;
  margin: 0.2rem;
  display: relative;
  overflow: hidden;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  will-change: background-color;
}

.c0:hover {
  background-color: #161514;
}

.c0:active {
  background-color: #2a2928;
}

.c0:focus {
  outline: none;
}

<button
    class="c0"
    shape="rounded"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 3`] = `
<DocumentFragment>
  .c0 {
  background-color: #020100;
  color: #F2EFE9;
  font-size: 1.25rem;
  padding: 0.65rem 2.2rem 0.65rem 2.2rem;
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  font-weight: 500;
  font-stretch: normal;
  line-height: 1.4;
  margin: 0.2rem;
  display: relative;
  overflow: hidden;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  will-change: background-color;
}

.c0:hover {
  background-color: #161514;
}

.c0:active {
  background-color: #2a2928;
}

.c0:focus {
  outline: none;
}

<button
    class="c0"
    shape="rounded"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 4`] = `
<DocumentFragment>
  .c0 {
  background-color: #020100;
  color: #F2EFE9;
  font-size: 1.50rem;
  padding: 0.80rem 2.6rem 0.80rem 2.6rem;
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  font-weight: 500;
  font-stretch: normal;
  line-height: 1.4;
  margin: 0.2rem;
  display: relative;
  overflow: hidden;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  will-change: background-color;
}

.c0:hover {
  background-color: #161514;
}

.c0:active {
  background-color: #2a2928;
}

.c0:focus {
  outline: none;
}

<button
    class="c0"
    shape="rounded"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all props 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #020100;
  color: #F2EFE9;
  font-size: 1.25rem;
  padding: 0.65rem 2.2rem 0.65rem 2.2rem;
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  font-weight: 500;
  font-stretch: normal;
  line-height: 1.4;
  margin: 0.2rem;
  display: relative;
  overflow: hidden;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  will-change: background-color;
}

.c0:hover {
  background-color: #161514;
}

.c0:active {
  background-color: #2a2928;
}

.c0:focus {
  outline: none;
}

<button
    class="c0"
    color="primary"
    shape="rounded"
  >
    Test
  </button>
</DocumentFragment>
`;
